# tmp

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.changeset/: all-cities-hang.md  config.json  tiny-rabbits-kneel.md  vast-insects-judge.md
docs/: README.md  cli-reference.md  desktop-helpers-usage.md  development.md  skills.md
skills/wecomcli-contact/: SKILL.md
skills/wecomcli-doc/: SKILL.md
skills/wecomcli-doc/references/: get-doc-content.md  smartpage-create.md
skills/wecomcli-msg/: SKILL.md
skills/wecomcli-msg/references/: send-friend-message.md  watch-friend.md
skills/wecomcli-smartsheet/: SKILL.md
skills/wecomcli-smartsheet/references/: smartsheet-cell-value-formats.md  smartsheet-field-types.md  smartsheet-get-records.md
src/: json_rpc.rs
src/auth/: qrcode.rs
src/cmd/: auth.rs  init.rs
src/helpers/: AGENTS.md  mod.rs  registry.rs  wecom_desktop.rs
src/helpers/contact/: add_external_friend.rs  mod.rs
src/helpers/doc/: auto_file_upload.rs  mod.rs  smartsheet_add_records_auto_file.rs  smartsheet_update_records_auto_file.rs
src/helpers/msg/: mod.rs  send_friend_message.rs  watch_all.rs  watch_friend.rs
src/media/: mod.rs  utils.rs
