[package]
name = "wecom-cli"
version = "0.1.7"
edition = "2024"
description = "The official CLI for WeCom — 企业微信命令行工具，让人类和 AI Agent 都能在终端中操作企业微信"
license = "MIT"
repository = "https://github.com/WecomTeam/wecom-cli"
homepage = "https://github.com/WecomTeam/wecom-cli"
readme = "README.md"
keywords = ["wecom", "cli", "mcp", "wechat-work"]
categories = ["command-line-utilities"]
include = ["/src/**/*", "/build.rs", "/Cargo.toml", "/Cargo.lock", "/LICENSE", "/README.md"]

[features]
custom-endpoint = []

[[bin]]
name = "wecom-cli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart", "stream", "rustls"] }
dotenvy = "0.15.7"
dirs = "6.0.0"
base64 = "0.22"
mime = "0.3"
mime_guess = "2"
infer = "0.19"
rand = "0.9"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
sanitize-filename = "0.6.0"
tempfile = "3.27.0"
cliclack = "0.5"
qr2term = "0.3"
qrcode = "0.14"
open = "5"
